# microframe

./: .gitignore  ARCHITECTURE.md  MIGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  SUMMARY.txt  analytics.md  app.py  config.json  coverage.xml  depsr.py  main.py  makefile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pyproject.yml
authx/: CHANGELOG.md  README.md  __init__.py  config.py  dependencies.py  exceptions.py  jwt.py  manager.py  middleware.py  models.py  routes.py  security.py
docs/: ARCHITECTURE_GLOBAL.md  CLI.md  NAVIGATION.md  README.md  TECHNICAL_README.md  add_navigation.py
docs/authx/: LICENSE.md  config.md  dependencies.md  exceptions.md  intro.md  jwt.md  manager.md  model.md  security.md
docs/examples/: authWs.md
docs/guides/: authentication.md  best-practices.md  deployment.md  getting-started.md  websocket-chat.md
docs/microframe/: README.md  application.md  config.md  configurations.md  decorators.md  dependencies.md  docs_ui.md  exceptions.md  logger.md  middleware.md  openapi.md  registry.md  router.md  routing_models.md  templates.md  ui.md  validation.md
docs/microui/: README.md  advance.md  daisy_ui_kit.md  footer.md  layout.md  layout_pages.md  layouts.md  pages.md  thems.md  utils.md
docs/ws/: websocket.md
ecommerce/routes/: items.py
examples/: app.py  authWs.py  auth_example.py  basic_app.py  protected.py  template_testing.py
examples/custom_templates/: compoments.py
manager/: conf.py  runtimer.py
manager/crud/: plugin.py  taskcurd.py
manager/plManager/: loader.py  reloader.py  validator.py
manager/routes/: task.py
manager/task/: corethread.py  taskmanager.py
manager/tools/: error.py
microframe/: ARCHITECTURE.md  AUTHX_NOTE.md  FEATURES.md  LIMITATIONS.md  MIGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  SUMMARY.txt  WS_NOTE.md  __init__.py  app.py  cli.py  routing.py
microframe/configurations/: __init__.py  deps.py  jwtConf.py  manager.py  microframe.py  secure.py
microframe/core/: __init__.py  application.py  config.py  exceptions.py
microframe/dependencies/: __init__.py  exceptionHandler.py  manager.py  models.py
microframe/docs/: __init__.py  openapi.py  ui.py
microframe/engine/: __init__.py  cache.py  component.py  engine.py  feature.md  filters.py  globals.py  helpers.py  msf.py.back
microui/: README.md  __init__.py  advance.py  auth_pages.py  daisy_ui_kit.py  layout.py  layout_pages.py  thems.py  utils.py
starthub/: routes.py
tests/: README.md  __init__.py  conftest.py  test_integration.py
ws/: websocket.py
(+64 files in other folders)
